Atualização do meu site

--- a/minha_002/index.html
+++ b/minha_002/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Life</title>
+    <title>GLS-STON</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome To My Page</h1>
+        <h1>GLS-STON</h1>
         <p>Pessoal, este é o meu teste de blog</p>
     </header>
 
@@ -24,6 +25,10 @@
             </nav>
 
             <p>Pessoal , este site tem o intuito de mostrar a minha trajetória claro, não será tudo postado cá , mas há de se ter o essencial a fim de vocês terem uma peque lição de vida, tudo será resumido mas penso que a mensagem há de ficar</p>
+
+            <h4>Nota:</h4>
+
+            <p>Dizer que este site estará em constante mudança , então fique atento as novas dicas que hão de sair e de certa forma então melhorar com o teu desenvolvimento pessoal</p>
 
             <h2>Introdução</h2>
 
@@ -49,6 +54,14 @@
             <h3>Família</h3>
 
             <p>Falar de família, é meio perdido, desde o tempo dos nossos antepassados, até agora, então nem se sabe que foi o primeiro homem com vários sobrenome, mas isto é hstória que eu hei de contar com mais detalhes se calahr na outra geração, mas o que importaa é que, hoje eu tenho a minha Avó, Mãe , Pai, irmãos, cada pessoa tem a sua própria visão para com os seus pais, mas eu de respeitar e honrrar sempre a minha palavra, sou escravo delas, e família é algo que se conta, não os tios que estão nos Cunene, e tal, mas os que realmente se importam com o seu crescimento, ajudam-te de certa forma, a seres uma pessoa melhor e posicionada no mercado. Família é quem te ajuda nos momentos difíceis , família é que partilha bons e maus momentos contigo. Família não é só de sangue, de vida também. </p>
+
+            <h3>Amizades</h3>
+
+            <p>Amigos para mim é algo muito essencial, muitas das pessoas que tu conheces não são teus amigos, uns são apenas acompanhates de cada fase em que atinges na tua vida, virá pessoas que apenas beneficiaram das tuas habilidades, não porque gosta de ti, apenas pela sua utilidade, então não te destraias com certas pessoas que apareceram no teu percurso. Seria irónico eu apenas abordar de más perspectivas de amizades enquanto que na vida existem amigos de verdade, que são aqueles que passam a sua visão do mundo, amigos que conversam do futuro, que te abre portas quando precisas, aqueles que quando estás triste te faz rir, come e dorme contigo, tu sabes da vida dele e ele sabe da tua , amizades duradouras, amigos que querem vencer juntos e de certa forma dar uma melhor qualidade de vida a sua família. Portanto fique atento a certas pessoas que aparecem na tua vida, a vida é mesmo assim feliz ou infelizmente, temos de aceitar a realidade da vida e dar a volta quando ela nos magoar, vamos todos vencer.</p>
+
+            <h2>Conclusão</h2>
+
+            <p>Quero terminar esta minha abordagem de modo a encorajar todo mundo a seguir o teu futuro, lembra que tudo vai de acordo a nossa realidade, nunca faça algo que vos faz perder tempo e não faz a vossa vida progredir, se eu estou aqui hoje a desenvolver este site para vocês, é porque eu sei que de certa forma vai me ajudar a crescer, melhorar a cada dia, e ser bom naquilo que faço, sinto que estas dicas foram muito valiosas, faltou coisas? Claro faltou, mas não devemos ter pressa, com a fé de Deus, se cuidem e amam vocês mesmo, sejam felizes. GLS-Ston</p>
         </main>
     </article>
 </body>
