--- a/minha_002/index.html
+++ b/minha_002/index.html
@@ -15,50 +15,50 @@
 <main>
 <nav>               
    
-        <a href="">Home</a>
-        <a href="">Curiosidades</a>
-        <a href="">Sobre Nós</a>
+        <a href="#">Home</a>
+        <a href="#">Curiosidades</a>
+        <a href="#">Sobre Nós</a>
                 
 </nav>
 
-<p>Pessoal , este site tem o intuito de mostrar a minha trajetória claro, não será tudo postado cá , mas há de se ter o essencial a fim de vocês terem uma peque lição de vida, tudo será resumido mas penso que a mensagem há de ficar</p>
+<p>Pessoal , este site tem o intuito de mostrar a minha trajetória claro, não será tudo postado cá , mas há de se ter o essencial a fim de vocês terem uma pequena lição de vida, tudo será resumido mas penso que a mensagem há de ficar.</p>
 
 <h4>Nota:</h4>
 
-<p>Dizer que este site estará em constante mudança , então fique atento as novas dicas que hão de sair e de certa forma então melhorar com o teu desenvolvimento pessoal</p>
+<p>Dizer que este site estará em constante mudança , então fique atento as novas dicas que hão de sair e de certa forma então melhorar com o teu desenvolvimento pessoal.</p>
 
 <h2>Introdução</h2>
 
-<p>Francisco De Apresentação Chitombi é o meu nome , filho de António De Freitas Chitombi e Gladyss Fernandes Dos Santos De Apresentação , natural de Viana.</p>
+<p><strong>Francisco De Apresentação Chitombi</strong> é o meu nome , filho de <a href="#">António De Freitas Chitombi</a> e <a href="#">Gladyss Fernandes Dos Santos De Apresentação</a> , natural de <strong>Viana</strong>.</p>
 
-<p>Desenvolvi este blog com a finalidade de mostrar para vocês que é possível sim, não realizavél, mas possível.</p>
+<p>Desenvolvi este blog com a finalidade de mostrar para vocês que é possível sim, <strong>não realizavél, mas possível</strong>.</p>
 
 <h2>Desenvolvimento</h2>
 
 <h3>Formação</h3>
 
-<p>Eu estudei no Colégio São João Paulo ||, onde frequentei todo o meu ensino primário, era uma formação boa, houve bons professores, bons colegas , já houve brigas, mas como tudo né, uma escola que ensinou-me que afinal de conta nós conhecemos pessoas para toda vida, digo isso por exeperiência própria, a vida hoje mostrou-me que devemos valorizar os nossos amigos que hoje não têm uma condição financeira boa, porque a vida, da voltas. </p>
+<p>Eu estudei no <a href="#">Colégio São João Paulo ||</a>, onde frequentei todo o meu <strong>ensino primário</strong>, era uma formação boa, houve bons professores, bons colegas , já houve brigas, mas como tudo né, uma escola que ensinou-me que afinal de conta <strong>nós conhecemos pessoas para toda vida</strong>, digo isso por exeperiência própria, a vida hoje mostrou-me que devemos valorizar os nossos amigos que hoje não têm uma condição financeira boa, porque <strong>a vida, da voltas</strong>. </p>
 
 <h3>Música</h3>
 
-<p>Ingressei-me para um grupo musical, denominado Malta Grega, era um grupo que estava composto por Denilson Portugal, Paulo Vandúnem, estes foram os primeiros integrantes desta família, depois houve outros integrantes, como o Selo Boy, Kingueira Taylor, Ricardo Dos Santos, já huve várias atuações em grupo, já nos divertimos muito, conflitos, mas tudo se resolveu a base de conversa, porque nós somos irmãos, e além, somos homem. Eu aprendi que todo mundo tem o direito de fazer as suas escolhas, eu não continuei porque tinha outros ojetivos, os que continuaram, desejo o bom para eles, mas as vezes a vida da-nos recado, e devemos entende-lo, vi que a vida leva-nos na direção que nós escolhemos, não tem como plantar batata e colher tomate, eu decidi fazer o meu caminho, e espero que todo mundo tenha a capacidade de ver quando um lugar já não os pertence e precisa partir para outra.</p>
+<p>Ingressei-me para um <strong>grupo musical</strong>, denominado <a href="#">Malta Grega</a>, era um grupo que estava composto por <a href="#">Denilson Portugal</a>, <a href="#">Paulo Vandúnem</a>, estes foram <strong>os primeiros integrantes</strong> desta <strong>família</strong>, depois houve outros integrantes, como o <a href="#">Selo Boy</a>, <a href="#">Kingueira Taylor</a>, <a href="#">Ricardo Dos Santos</a>, já huve várias atuações em grupo, já nos divertimos muito, conflitos, mas tudo se resolveu a base de conversa, porque <strong>nós somos irmãos, e além disso, somos homem</strong>. Eu aprendi que <strong>todo mundo tem o direito de fazer as suas escolhas</strong>, eu não continuei porque tinha outros ojetivos, os que continuaram, desejo o bom para eles, mas as <strong>vezes a vida da-nos recado</strong>, e devemos entende-lo, vi que <strong>a vida leva-nos na direção que nós escolhemos</strong>, <strong>não tem como plantar batata e colher tomate</strong>, eu decidi fazer o meu caminho, e espero que todo mundo tenha a capacidade de ver quando um lugar já não os pertence e precisa partir para outra.</p>
 
 <h3>Problemas</h3>
 
 
-<p>Problemas, fazem parte da vida , mas devemos definir estratégias para supera-los, como dizia Augusto Cury, uma vida sem problemas é como se fosse um céu sem tempestade, um mar sem ondas, mas de certa forma vemos que estas as ondas é que fazem o mar ficar mais forte né, então aceita o processo, passa pelo processo, muitas vezes vão te humilhar, faltar com respeito, provocar-te para tu seres como eles, mas jamais deixe isso, você é mais forte do que eles, e sempre que as pessoas te julgarem por algo que não fazes, não percas energia em tentar provar o contrário para eles quando tu sabes da verdade, perde tempo em crescer, evolua, responder críticas é meuio que um cão ladrar para o céu, não vale nada.</p>
+<p><strong>Problemas, fazem parte da vida</strong> , mas devemos definir estratégias para supera-los, como dizia <a href="#">Augusto Cury</a>, uma vida sem problemas é como se fosse um céu sem tempestade, de certa forma vemos que as ondas do mar é que fazem ele ficar mais forte né, então aceita o processo, passa pelo processo, muitas vezes vão te humilhar, faltar com respeito, provocar-te para tu seres como eles, mas jamais deixe isso, você é mais forte do que eles, e sempre que as pessoas te julgarem por algo que não fazes, <strong>não percas energia em tentar provar o contrário para eles quando tu sabes da verdade</strong>, <strong>perca tempo em crescer</strong>, evolua, responder críticas é meuio que um cão ladrar para o céu, não vale nada.</p>
 
 <h3>Família</h3>
 
-<p>Falar de família, é meio perdido, desde o tempo dos nossos antepassados, até agora, então nem se sabe que foi o primeiro homem com vários sobrenome, mas isto é hstória que eu hei de contar com mais detalhes se calahr na outra geração, mas o que importaa é que, hoje eu tenho a minha Avó, Mãe , Pai, irmãos, cada pessoa tem a sua própria visão para com os seus pais, mas eu de respeitar e honrrar sempre a minha palavra, sou escravo delas, e família é algo que se conta, não os tios que estão nos Cunene, e tal, mas os que realmente se importam com o seu crescimento, ajudam-te de certa forma, a seres uma pessoa melhor e posicionada no mercado. Família é quem te ajuda nos momentos difíceis , família é que partilha bons e maus momentos contigo. Família não é só de sangue, de vida também. </p>
+<p><strong>Falar de família, é meio perdido</strong>, desde o tempo dos nossos antepassados, até agora, então nem se sabe quem foi o primeiro homem com vários sobrenomes, mas <strong>isto é hstória que eu hei de contar com mais detalhes se calahar na outra geração</strong>, mas o que importaa é que, hoje eu <strong>tenho a minha Avó, Mãe , Pai, irmãos</strong>, <strong>cada pessoa tem a sua própria visão para com os seus pais</strong>, mas eu hei de respeitar e honrrar sempre a minha palavra, sou escravo delas, e família é algo que se conta, não os tios que estão nos Cunene, e tal, mas os que realmente se importam com o seu crescimento, ajudam-te de certa forma, a seres uma pessoa melhor e posicionada no mercado. Família é quem te ajuda nos momentos difíceis , família é que partilha bons e maus momentos contigo. <strong>Família não é só de sangue, de vida também</strong>. </p>
 
 <h3>Amizades</h3>
 
-<p>Amigos para mim é algo muito essencial, muitas das pessoas que tu conheces não são teus amigos, uns são apenas acompanhates de cada fase em que atinges na tua vida, virá pessoas que apenas beneficiaram das tuas habilidades, não porque gosta de ti, apenas pela sua utilidade, então não te destraias com certas pessoas que apareceram no teu percurso. Seria irónico eu apenas abordar de más perspectivas de amizades enquanto que na vida existem amigos de verdade, que são aqueles que passam a sua visão do mundo, amigos que conversam do futuro, que te abre portas quando precisas, aqueles que quando estás triste te faz rir, come e dorme contigo, tu sabes da vida dele e ele sabe da tua , amizades duradouras, amigos que querem vencer juntos e de certa forma dar uma melhor qualidade de vida a sua família. Portanto fique atento a certas pessoas que aparecem na tua vida, a vida é mesmo assim feliz ou infelizmente, temos de aceitar a realidade da vida e dar a volta quando ela nos magoar, vamos todos vencer.</p>
+<p><strong>Amigos para mim é algo muito essencial</strong>, muitas das pessoas que tu conheces não são teus amigos, <strong>uns são apenas acompanhates de cada fase em que atinges na tua vida</strong>, virá pessoas que apenas beneficiaram das tuas habilidades, não porque gosta de ti, <strong>apenas pela sua utilidade</strong>, então não te destraias com certas pessoas que apareceram no teu percurso. Seria irónico eu apenas abordar de más perspectivas de amizades enquanto que <strong>na vida existem amigos de verdade</strong>, que são aqueles que passam a sua visão do mundo, amigos que conversam do futuro, que te abre portas quando precisas, aqueles que quando estás triste te faz rir, come e dorme contigo, tu sabes da vida dele e ele sabe da tua , amizades duradouras, amigos que querem vencer juntos e de certa forma dar uma melhor qualidade de vida a sua família. Portanto fique atento a certas pessoas que aparecem na tua vida, a vida é mesmo assim, feliz ou infelizmente, <strong>temos de aceitar a realidade da vida e dar a volta quando ela nos magoar</strong>, vamos todos vencer.</p>
 
 <h2>Conclusão</h2>
 
-<p>Quero terminar esta minha abordagem de modo a encorajar todo mundo a seguir o teu futuro, lembra que tudo vai de acordo a nossa realidade, nunca faça algo que vos faz perder tempo e não faz a vossa vida progredir, se eu estou aqui hoje a desenvolver este site para vocês, é porque eu sei que de certa forma vai me ajudar a crescer, melhorar a cada dia, e ser bom naquilo que faço, sinto que estas dicas foram muito valiosas, faltou coisas? Claro faltou, mas não devemos ter pressa, com a fé de Deus, se cuidem e amam vocês mesmo, sejam felizes. GLS-Ston</p>
+<p>Quero terminar esta minha abordagem de modo a encorajar todo mundo a seguir o teu futuro, lembra que tudo vai de acordo a nossa realidade, <strong>nunca faça algo que vos faz perder tempo e não faz a vossa vida progredir</strong>, se eu estou aqui hoje a desenvolver este site para vocês, é porque eu sei que de certa forma vai me ajudar a crescer, melhorar a cada dia, e ser bom naquilo que faço, sinto que estas dicas foram muito valiosas, faltou coisas? Claro faltou, mas não devemos ter pressa, <strong>com a fé de Deus, se cuidem e amam vocês mesmo</strong>, sejam felizes. <strong>GLS-Ston</strong></p>
 
 <footer><p>Site desenvolvido pela equipe GLS-STON</p></footer>
 </main>
